--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,6 +1,3 @@
 <h1><%= @title %></h1>
+<p><%= t 'games_new.intro' %></p>
 <%= render "form", game: @game %>
-<br>
-<div>
-  <%= games_link %>
-</div>
