--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,10 @@
-<footer class="grid layout-footer">
-  <div>
-    <p><%= t 'layout-footer.sitemap' %></p>
-    <ul>
-      <li><%= link_to t('pages.help.title'), help_path %></li>
-    </ul>
+<footer class="layout-footer container">
+  <div class="grid">
+    <div>
+      <p><%= t 'layout-footer.sitemap' %></p>
+      <ul>
+        <li><%= link_to t('pages.help.title'), help_path %></li>
+      </ul>
+    </div>
   </div>
 </footer>
