--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
     <%= stylesheet_link_tag "application" %>
   </head>
   <body>
-    <main class="container">
+    <div class="container">
       <%= render 'layouts/navbar' %>
+    </div>
+    <main class="container">
       <p class="flash--notice"><%= notice %></p>
       <p class="flash--alert"><%= alert %></p>
       <%= yield %>
-      <%= render 'layouts/footer' %>
     </main>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
