add actions pages

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,7 @@
       <p><%= t 'layout-footer.sitemap' %></p>
       <ul>
         <li><%= link_to t('pages.help.title'), help_path %></li>
+        <li><%= link_to t('pages.actions.title'), actions_path %></li>
       </ul>
     </div>
   </div>
