--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= stylesheet_link_tag "application" %>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <%= render 'layouts/navbar' %>
     </div>
     <main class="container">
