--- a/app/views/games/_dashboard2.html.erb
+++ b/app/views/games/_dashboard2.html.erb
@@ -1,7 +1,7 @@
 <div class="player-cards">
   <% dashboard.each do |row| %>
     <div class="player-cards__player">
-      <p><strong><%= row[:player].name %></strong> <%= rank_to_icon row[:rank] %>
+      <p><strong><%= row[:player].name %></strong> <%= rank_to_icon row[:rank] %> <%= edit_player_link(row[:player]) unless defined?(readonly) && readonly %>
         <% if row[:player].description %>
           <br />
           <%= row[:player].description %>
@@ -15,7 +15,7 @@
           <% row[:cards].each do |card| %>
             <div class="player-cards__action player-cards__action--done">
               <p><%= card.action %> -- Fait à <%= format_time card.done_at %></p>
-              <% unless defined?(readonly) %>
+              <% unless defined?(readonly) && readonly %>
                 <p><%= public_card_link card %></p>
               <% end %>
             </div>
@@ -31,7 +31,7 @@
       <%# current is not set when user finished game %>
       <div class="player-cards__action">
         <p><%= row[:current].action %></p>
-        <% unless defined?(readonly) %>
+        <% unless defined?(readonly) && readonly %>
           <p>
             <%= public_card_link row[:current] %> |
             <%= edit_card_link row[:current] %>
