--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,16 +1,3 @@
-<nav class="breadcrumb">
-  <ul>
-    <li><%= link_to t('games.index.title'), games_path(game_id: @player.game_id) %></li>
-    <li><%= link_to @player.game.name, @player.game %></li>
-    <li><%= players_link @player.game %></li>
-    <li><%= player_link @player %></li>
-    <li><%= @title %></li>
-  </ul>
-</nav>
-<h1><%= @title %></h1>
+<h1><%= game_link @player.game %> / <%= @title %></h1>
 <%= render "form", player: @player %>
-<br>
-<div>
-  <%= link_to t('players.index.title'), game_player_path(game_id: @player.game_id, id: @player.id) %>
-  <%= button_to t('players.destroy.title'), game_player_path(game_id: @player.game_id, id: @player.id), method: :delete %>
-</div>
+<%= button_to t('players.destroy.title'), game_player_path(game_id: @player.game_id, id: @player.id), method: :delete %>
