--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -31,7 +31,7 @@
   <div>
     <h2><%= t 'game_show.state' %></h2>
     <% if @game.players.size > 0 %>
-      <%= render 'games/dashboard2', dashboard: @game.get_dashboard2, readonly: @game.started? %>
+      <%= render 'games/dashboard2', dashboard: @game.get_dashboard2, readonly: @game.started?, display_card_links: true %>
     <% else %>
       <p>⚠️ <%= t('game_show.no_enough_players') %></p>
     <% end %>
