--- a/app/views/games/_dashboard.html.erb
+++ b/app/views/games/_dashboard.html.erb
@@ -32,5 +32,5 @@
     <% end %>
   </article>
 </div>
-<h2><%= t 'faq.title' %></h2>
-<%= render 'games/faq' %>
+<h2><%= t 'faq_for_player.title' %></h2>
+<%= render 'pages/faq_for_player' %>
