--- a/app/views/games/_rules.html.erb
+++ b/app/views/games/_rules.html.erb
@@ -1,3 +1,3 @@
-<% t("faq.items.what_are_the_rules.description").each do |sentence| %>
+<% t("faq_for_player.items.what_are_the_rules.description").each do |sentence| %>
   <p><%= sentence.html_safe %></p>
 <% end %>
