--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @title %></h1>
 <p>Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant leur propre vie.</p>
-<h2><%= t 'game_rules' %></h2>
-<%= render 'games/rules' %>
 <h2>Exemple concret</h2>
 <%= render 'pages/game_example' %>
+<h2><%= t 'faq_for_player.title' %></h2>
+<%= render 'shared/faq_for_player' %>
