--- a/app/views/games/_dashboard.html.erb
+++ b/app/views/games/_dashboard.html.erb
@@ -33,4 +33,4 @@
   </article>
 </div>
 <h2><%= t 'faq_for_player.title' %></h2>
-<%= render 'pages/faq_for_player' %>
+<%= render 'shared/faq_for_player' %>
