--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
       <ul>
         <li><%= link_to t('pages.help.title'), help_path %></li>
         <li><%= link_to t('pages.actions.title'), actions_path %></li>
+        <li><%= link_to t('pages.api_doc.title'), api_doc_path %></li>
         <li><%= switch_lang_link %></li>
       </ul>
     </div>
