--- a/app/views/cards/_events.html.erb
+++ b/app/views/cards/_events.html.erb
@@ -1,8 +1,8 @@
 <% if cards.size != 0 %>
   <ul class="events">
     <% cards.each do |card| %>
-      <li>💀<strong><%= format_time card.done_at %></strong>: <%= t 'card_events.one_player' %> <%= kill_word %>.<br />
-        <%= t 'card_events.we_make_he_did' %> <strong><%= card.action %></strong>.</li>
+      <li>💀<strong><%= format_time card.done_at %></strong>: <%= t 'cards._events.one_player' %> <%= kill_word %>.<br />
+        <%= t 'cards._events.we_make_he_did' %> <strong><%= card.action %></strong>.</li>
     <% end %>
   </ul>
 <% else %>
