--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -16,7 +16,7 @@
   <div>
     <%= form.label :actions %>
     <%= form.text_area :actions, rows: 10 %>
-    <small><%= t 'game_form.actions_help' %></small>
+    <small><%= t 'games._form.actions_help' %></small>
   </div>
   <div>
     <%= form.submit %>
