--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="layout-footer container">
   <div class="grid">
     <div>
-      <p><%= t 'layout-footer.sitemap' %></p>
+      <p><%= t 'layout._footer.sitemap' %></p>
       <ul>
         <li><%= link_to t('pages.help.title'), help_path %></li>
         <li><%= link_to t('pages.actions.title'), actions_path %></li>
