--- a/app/views/pages/actions.html.erb
+++ b/app/views/pages/actions.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @title %></h1>
-<p><%= t('pages_actions.intro') %></p>
+<p><%= t('pages.actions.found_actions_is_not_easy') %></p>
 <ul>
   <% t('game.default_fields.actions').each do |action| %>
     <li><%= action %></li>
