--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -12,17 +12,17 @@
   <div>
     <%= form.label :email %>
     <%= form.email_field :email %>
-    <small><%= t('player_form.email_help') %></small>
+    <small><%= t('player._form.email_help') %></small>
   </div>
   <div>
     <%= form.label :name %>
     <%= form.text_field :name, required: true %>
-    <small><%= t('player_form.name_help') %></small>
+    <small><%= t('player._form.name_help') %></small>
   </div>
   <div>
     <%= form.label :description %>
     <%= form.text_area :description %>
-    <small><%= t('player_form.description_help') %></small>
+    <small><%= t('player._form.description_help') %></small>
   </div>
   <div>
     <%= form.submit %>
