--- a/app/views/games/_start_button.html.erb
+++ b/app/views/games/_start_button.html.erb
@@ -8,9 +8,9 @@
     <%= form.hidden_field :started_at, value: Time.now %>
     <%= form.submit '🏁 Démarrer la partie', disabled: !game.can_start? %>
     <% if game.can_start? %>
-      <small><%= t 'game_show.start_help' %></small>
+      <small><%= t 'games.show.start_help' %></small>
     <% else %>
-      <small>⚠️ <%= t('game_show.no_enough_players') %></small>
+      <small>⚠️ <%= t('games.show.no_enough_players') %></small>
     <% end %>
   <% end %>
 <% end %>
