--- a/app/views/shared/_faq_for_player.html.erb
+++ b/app/views/shared/_faq_for_player.html.erb
@@ -1,7 +1,8 @@
-<p><%= t 'faq_for_player.description' %></p>
-<% t('faq_for_player.items').each_key do |item| %>
+<h2><%= t 'shared._faq_for_player.title' %></h2>
+<p><%= t 'shared._faq_for_player.description' %></p>
+<% t('shared._faq_for_player.items').each_key do |item| %>
   <details>
-    <summary><%= t "faq_for_player.items.#{item}.summary" %></summary>
-    <%= render 'shared/sentences', key: "faq_for_player.items.#{item}.description" %>
+    <summary><%= t "shared._faq_for_player.items.#{item}.summary" %></summary>
+    <%= render 'shared/sentences', key: "shared._faq_for_player.items.#{item}.description" %>
   </details>
 <% end %>
