--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,5 +8,13 @@
         <li><%= switch_lang_link %></li>
       </ul>
     </div>
+    <div>
+      <p><%= t('layout._footer.external.title') %></p>
+      <ul>
+        <li><%= link_to t('layout._footer.external.github'), 'https://github.com/madeindjs/killer-game' %></li>
+        <li><%= link_to t('layout._footer.external.me'), 'https://rsseau.fr' %></li>
+      </ul>
+    </div>
   </div>
+  <p><small>🍪🚮 <%= t('layout._footer.cookieless') %></small></p>
 </footer>
