adapt some translations

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= game_link @game %> / <%= @title %></h1>
 <details <%= 'open' if @is_search_active %> %>
-  <summary><%= t :search %> <%if @is_search_active%> <mark>résultats filtrés</mark> <% end %></summary>
+  <summary><%= t :search %> <%if @is_search_active%> <mark><%= t('cards.index.filtered_results') %></mark> <% end %></summary>
   <%= form_with(method: :get) do |form| %>
     <%= form.label :player, Card.human_attribute_name("player") %>
     <%= form.select :player, options_for_select(@players_options, params[:player]), include_blank: true %>
