--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,14 +1,2 @@
-<nav class="breadcrumb">
-  <ul>
-    <li><%= games_link %></li>
-    <li><%= link_to @card.game.name, @card.game %></li>
-    <li><%= link_to t('cards.index.title'), game_cards_path(game_id: @game.id) %></li>
-    <li><%= @title %></li>
-  </ul>
-</nav>
-<h1><%= @title %></h1>
+<h1><%= game_link @game %> / <%= @title %></h1>
 <%= render "form", card: @card %>
-<br>
-<div>
-  <%= link_to t('games.show.title'), @card.game %>
-</div>
