--- a/app/assets/stylesheets/application/player-cards.css
+++ b/app/assets/stylesheets/application/player-cards.css
@@ -21,6 +21,8 @@
   border-right: 1px solid var(--card-border-color);
 
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
+
+  display: flex;
 }
 
 .player-cards__action p,
