--- a/app/views/cards/_done_button.html.erb
+++ b/app/views/cards/_done_button.html.erb
@@ -1,5 +1,6 @@
 <%= form_with(model: card, url: game_card_path(game_id: card.game.id, id: card.token), remote: true, class: "card-form") do |form| %>
   <%= form.hidden_field :done_at, value: card.done? ? "0" : "1" %>
   <%= form.submit (card.done? ? t('cards.show.mark_as_todo') : t('cards.show.mark_as_done')),
-    class: (card.done? ? 'secondary outline' : '') %>
+    class: (card.done? ? 'secondary outline' : ''), disabled: !card.game.started? %>
+  <small><%= t 'cards._done_button.disabled' %></small>
 <% end %>
